Add some comments and do more refactoring